tests/__snapshots__/validation-template-test-text-level-errors-stderr.snap.txt
Error: Property 'toBe' does not exist on type 'Modifier'. ts(2339)

  2 | import { expect, test } from "tstyche";
  3 | test("is string a string?", () => {
  4 |   expect<string>().toBe<string>();
    |                    ~~~~
  5 | });
  6 | test("is number a string?", () => {
  7 |   expect<string>().toBe<number>();

      at ./__typetests__/test-text-level-type-errors.tst.ts:4:20

Error: Property 'toBe' does not exist on type 'Modifier'. ts(2339)

  5 | });
  6 | test("is number a string?", () => {
  7 |   expect<string>().toBe<number>();
    |                    ~~~~
  8 | });
  9 | 

      at ./__typetests__/test-text-level-type-errors.tst.ts:7:20

